<resources>
    <string name="app_name">회식이</string>
    <string name="login_activity_text">찾기 어려운 회식 장소를 식당 사장님들에게 직접 제의를 받으세요!</string>
    <string name="text_join_agree">입력하신 정보는 계약이 이루어졌을 때 식당에 제공될 수 있습니다.</string>
    <string name="text_phone">전화번호</string>
    <string name="text_name">이름</string>
    <string name="join_activity_title">회원 정보 입력</string>
    <string name="estimate_detail_activity_title">견적서 내용</string>
    <string name="contact_detail_activity_title">계약서 내용</string>
    <string name="admin_detail_activity_title">식당 자세히 보기</string>
    <string name="text_i_agree">동의합니다.</string>
    <string name="text_join">회원가입</string>
    <string name="tab_title_home">홈</string>
    <string name="tab_title_application">신청서</string>
    <string name="tab_title_estimate">견적서</string>
    <string name="tab_title_contact">계약서</string>
    <string name="text_title">제목</string>
    <string name="text_number">인원</string>
    <string name="text_time">시간</string>
    <string name="text_style">분위기</string>
    <string name="text_menu">메뉴</string>
    <string name="text_location">위치</string>
    <string name="text_apply_success">신청 완료</string>
    <string name="text_apply_canceled">취소됨</string>
    <string name="text_apply_contacted">계약됨</string>
    <string name="text_count_person">명</string>
    <string name="text_apply">신청</string>
    <string name="cancel">취소</string>
    <string name="text_rewrite">다시 작성</string>
    <string name="text_search">탐색</string>
    <string name="text_need_input">작성 필요</string>
    <string name="user_name">%1$s님</string>
    <string name="text_contact_apply_title">신청서 내용</string>
    <string name="text_contact_estimate_title">견적서 내용</string>
    <string name="text_contact_contact_title">계약 내용</string>
    <string name="text_join_name_help">사장님들이 확인하기 쉽도록 실명을 사용해주세요!</string>
    <string name="text_join_phone_help">연락이 가능한 전화번호를 입력해주세요!</string>
    <string name="text_start_contact">계약하기</string>
    <string name="text_style_completion_hint">분위기를 선택해주세요</string>
    <string name="text_select_this">이곳으로 지정</string>
    <string name="text_no_address">주소 없음</string>
    <string name="dialog_alert_title">알림</string>
    <string name="dialog_apply_message">메시지: %1$s\n인원: %2$d명\n시간: %3$s\n분위기: %4$s\n메뉴: %5$s\n위치: %6$s\n\n신청하면 취소는 가능하지만 수정이 불가능합니다. 이대로 신청하시겠습니까?</string>
    <!--<string name="dialog_contact_message">계약시 1인당 1,000￦ 의 계약금이 발생합니다. 현재 견적서로 계약을 하시겠습니까?</string>-->
    <string name="dialog_contact_message">계약을 하면 식당 사장님에게 알림이 갑니다. 또한 계약은 취소할 수 없습니다. 견적서를 계약 하시겠습니까?</string>
    <string name="dialog_cancel_message">신청서를 취소하면 내용이 모두 삭제 됩니다. 정말로 취소하시겠습니까?</string>
    <string name="drawer_open">메뉴 열림</string>
    <string name="drawer_close">메뉴 닫힘</string>
    <string name="snack_need_name">이름을 입력해주세요.</string>
    <string name="snack_need_phone">전화번호를 입력해주세요.</string>

    <string name="kakao_app_key" translatable="false">cf6bb484f52252387132a157d7832fb0</string>
    <string name="facebook_app_id" translatable="false">1586397501435939</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1586397501435939</string>
    <string name="text_email">계정 이메일</string>
    <string name="nav_logout">로그아웃</string>
    <string name="email_sign_up_email_help">비밀번호를 잊었을 때 찾는 용도로 사용합니다.</string>
    <string name="email_sign_up_email">이메일</string>
    <string name="email_sign_up_password">비밀번호</string>
    <string name="email_sign_up_password_help">비밀번호는 8자리 이상입니다.</string>
    <string name="email_sign_up_password_confirm">비밀번호 확인</string>
    <string name="email_sign_up_password_confirm_help">동일한 비밀번호를 한번더 입력해주세요.</string>
    <string name="text_prev">이전</string>
    <string name="text_next">다음</string>
    <string name="default_time_pattern">yyyy.MM.dd HH:mm</string>
    <string name="help_empty">데이터가 존재하지 않습니다!</string>
    <string name="application_time">신청 시간</string>
    <string name="estimate_time">견적서 시간</string>
    <string name="contact_time">계약한 시간</string>
    <string name="message_content">메시지 내용</string>
    <string name="detail_view">자세히 보기</string>
    <string name="application_location">신청서의 위치</string>
    <string name="admin_location">식당의 위치</string>
    <string name="admin_phone">식당의 전화번호</string>
    <string name="estimate_message">견적서 메시지</string>
    <string name="client_phone">고객의 전화번호</string>
    <string name="person_number">%1$d명</string>
    <string name="email_sign_up">이메일 등록</string>
    <string name="select_style">분위기를 선택하세요</string>
    <string name="complete_select">선택 완료</string>
    <string name="select">선택</string>
    <string name="need_gps_on_help">지도를 현재 위치로 맞추기 위해서 GPS기능을 켜야합니다. 설정화면으로 이동하시겠습니까?</string>
    <string name="fail_to_load_estimates">견적서 목록을 불러오는데 실패하였습니다</string>
    <string name="fail_to_load_contacts">계약서 목록을 불러오는데 실패하여 기존 목록을 가져옵니다</string>
    <string name="nav_account">계정 설정</string>
    <string name="account">계정</string>
    <string name="app_settings">앱 설정</string>
    <string name="distance_km">%1$.1fkm</string>
    <string name="near_admin">근처 식당</string>
    <string name="lastest_review">최근 리뷰</string>
    <string name="send_review">리뷰 남기기</string>
    <string name="rating">평점</string>
    <string name="play_app_guide">회식이 사용 가이드 보러가기</string>
    <string name="hour">시</string>
    <string name="minute">분</string>
    <string name="not_exist_near_admin">근처에 식당이 없어요!</string>
    <string name="not_exist_review">리뷰가 아직 없네요!</string>
    <string name="not_exist_estimate">아직 도착한 견적서가 없어요!</string>
    <string name="not_exist_contact">계약하신 내역이 없습니다</string>
    <string name="login_by_kakao">카카오 계정으로 로그인</string>
    <string name="login_by_facebook">페이스북 계정으로 로그인</string>
    <string name="login_by_email">일반 이메일로 시작하기</string>
    <string name="general">일반</string>
    <string name="new_admin">새로운 식당</string>
    <string name="to" translatable="false">To.</string>
    <string name="from" translatable="false">From.</string>
    <string name="not_exist_new_admin">새로 생긴 식당이 없네요</string>
    <string name="won">%1$d￦</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="not_exist_email_or_password">일치하는 이메일이 존재하지 않거나 비밀번호가 틀렸습니다</string>
    <string name="waiting_please">잠시만 기다려주세요</string>
    <string name="review">리뷰</string>
    <string name="thanks_to_review">리뷰를 등록해주셔서 감사합니다.</string>
    <string name="sign_up_email">이메일로 가입하기</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="bonus_image">사진</string>
    <string name="message">메시지</string>
    <string name="message_hint">(예시)강남역 근처에서 조용하게 회식하고 싶습니다.</string>
    <string name="style_hint">(예시)일반</string>
    <string name="menu_help">(예시)맛있는 치킨</string>
    <string name="one_more_click_for_exit">한번 더 누르시면 종료됩니다</string>
    <string name="title_is_more_than_8_characters">제목은 8글자 이상입니다.</string>
    <string name="time_is_error">시간이 잘못되었습니다.</string>
    <string name="select_style_please">분위기를 선택해주세요.</string>
    <string name="select_menu_please">메뉴를 입력해주세요.</string>
    <string name="empty_input_text">입력창이 비어있습니다.</string>
    <string name="time_example">시간 예시</string>
    <string name="message_example">메시지 예시</string>
    <string name="menu_example">메뉴 예시</string>
    <string name="rating_format">%.1f점</string>
    <string name="refresh">새로고침</string>
    <string name="open_source_license">오픈소스 라이선스</string>
    <string name="account_settings">계정 설정</string>
    <string name="save">저장</string>
    <string name="please_select_style">분위기를 선택해주세요</string>
    <string name="wrong_phone_number">올바르지 않은 전화번호 형식입니다.</string>
    <string name="fail_to_join">회원가입에 실패하였습니다</string>
    <string name="not_connect_network">네트워크가 연결되어있지 않습니다</string>
    <string name="select_available_move_distance">이동 가능한 거리 선택</string>
    <string name="available_move_distance">이동할 수 있는 거리 : %1$.1fkm</string>
</resources>
