<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/image_state"
                    android:layout_width="32dp"
                    android:layout_height="32dp" />

                <TextView
                    android:id="@+id/text_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:textSize="@dimen/fontLargest"
                    android:textColor="@color/orange"
                    android:textStyle="bold"/>

                <Button
                    android:id="@+id/button_helper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helper"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/fontNormal"
                    android:background="@drawable/background_rectangle_button_primary"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="16dp"
                android:background="@color/whiteGrey" />

            <TextView
                style="@style/ApplicationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/message"/>

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/message_hint"
                android:maxLength="@integer/max_length_message"
                android:background="@drawable/background_edit_text_white"
                android:inputType="text"
                android:maxLines="1" />

            <TextView
                style="@style/ApplicationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/text_number"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:background="@drawable/background_rectangle_button_primary">

                <ImageButton
                    android:id="@+id/button_up"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_add_green_24dp"
                    android:background="?attr/selectableItemBackground"/>

                <EditText
                    android:id="@+id/edit_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="center_horizontal"
                    android:maxLength="2"
                    android:inputType="number"
                    android:maxLines="1"
                    android:minWidth="50dp"
                    android:background="@drawable/background_edit_text_white"/>

                <TextView
                    style="@style/ApplicationTextView"
                    android:id="@+id/text_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/text_count_person"/>

                <ImageButton
                    android:id="@+id/button_down"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_remove_green_24dp"
                    android:background="?attr/selectableItemBackground"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/whiteGrey" />

            <TextView
                style="@style/ApplicationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/text_time"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_rectangle_button_primary"
                android:gravity="center"
                android:padding="8dp">

                <com.project.boostcamp.publiclibrary.view.WheelPicker
                    android:id="@+id/wheel_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/ApplicationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour"/>

                <com.project.boostcamp.publiclibrary.view.WheelPicker
                    android:id="@+id/wheel_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"/>

                <TextView
                    style="@style/ApplicationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute"/>

                <com.project.boostcamp.publiclibrary.view.WheelPicker
                    android:id="@+id/wheel_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/whiteGrey" />

            <TextView
                style="@style/ApplicationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/text_style"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/style_hint"
                    android:textSize="@dimen/fontNormal"
                    android:textColor="@color/black"
                    android:focusable="true"
                    android:background="@drawable/background_edit_text_white"/>

                <Button
                    android:id="@+id/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/background_rectangle_button_primary"
                    android:text="@string/select"
                    android:textSize="@dimen/fontNormal"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

            <TextView
                style="@style/ApplicationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/text_menu"/>

            <EditText
                android:id="@+id/edit_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/menu_help"
                android:maxLength="@integer/max_length_menu"
                android:background="@drawable/background_edit_text_white"
                android:inputType="text"
                android:maxLines="1"/>


            <TextView
                style="@style/ApplicationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/text_location"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fontSmall"
                    android:background="@drawable/background_edit_text_white"/>

                <ImageButton
                    android:id="@+id/button_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_search_green_24dp"
                    android:background="@drawable/background_rectangle_button_primary"/>
            </LinearLayout>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/button_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rectangle_button_primary"
        android:text="@string/text_apply"
        android:textSize="@dimen/fontNormal"
        android:textColor="@color/colorPrimary"/>
</LinearLayout>